Fix: Not showing the last menu item in mobile mode

--- a/src/components/sections/MenuHeader.css
+++ b/src/components/sections/MenuHeader.css
@@ -92,7 +92,7 @@
 }
 
 .menu-header__navigation--expand {
-  max-height: 280px;
+  max-height: 360px;
 }
 
 @media screen and (min-width: 768px) {
